--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: flex-end;
     align-items: center;
+    z-index: 3;
 }
 .call-in-action a {
     font-size: 15px;
@@ -91,10 +92,12 @@ body {
 
 /* footer-section */
 #footer-section {
+    position: relative;
     width: 100%;
     height: 100px;
     background-color: #282828;
     justify-content: space-between;
+    z-index: 2;
 }
     /* footer-left */
 .footer-left,
