--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ main {
 #main-section {
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-y: auto;
 
 }
 
@@ -92,7 +92,7 @@ main {
     align-items: center;
 }
 /* .new-playlist {
-    align-items: stretch;
+    overflow: auto;
 } */
 .new-playlist div{
     width: 100%;
@@ -151,7 +151,7 @@ main {
     height: 100%;
     padding-top: 100px;
     background-color: #141922;
-    overflow: auto;
+    overflow-y: auto;
     color: white;
 }
 .call-in-action {
@@ -199,7 +199,7 @@ main {
 #song-content h2 {
     width: 100%;
     font-size: 30px;
-    margin: 30px 0 20px 20px;
+    padding: 30px 0 20px 20px;
 }
 #recently-played .song-album {
     justify-content: space-around;
