--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 .uppercase {
     text-transform: uppercase;
 }
-clearfix::after {
+.clearfix::after {
     content:"";
     display: table; 
     clear: both;
@@ -196,19 +196,30 @@ main {
 
     /* song-content section */
 
-#song-content h2 {
+#song-content h2,
+#created-for h2 {
     width: 100%;
     font-size: 30px;
     padding: 30px 0 20px 20px;
 }
 #recently-played .song-album {
-    justify-content: space-around;
-    padding: 10px 15px 0 15px;
+    padding: 0 15px 0 15px;
+    justify-content: space-between;
+
 }
 #recently-played .recently-played {
     width: calc(90% / 6);
+    height: 200px;
+    
+    flex-shrink: 0;
+
 }
 #recently-played img {
+    width: 100%;
+    height: 100%;
+}
+
+#creater-for h2 {
     width: 100%;
 }
 /* footer */
