--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ main {
 }
 #main-section {
     width: 100%;
+    max-width: 100%;
     height: 100%;
     overflow-y: auto;
 
@@ -195,32 +196,76 @@ main {
 }
 
     /* song-content section */
+#song-content {
+    margin-bottom: 30px;
+}
 
-#song-content h2,
-#created-for h2 {
+/* #song-album-1,
+.description-album-1 {
+    justify-content: space-around;
+} */
+#song-content>h2 {
     width: 100%;
     font-size: 30px;
-    padding: 30px 0 20px 20px;
+    padding: 30px 0 50px 20px;
 }
 #recently-played .song-album {
     padding: 0 15px 0 15px;
-    justify-content: space-between;
-
 }
-#recently-played .recently-played {
+.song-album-1 img {
+    width: 100%;
+    margin: auto;
+}
+.description-album-1 {
+    width: 100%;
+    margin: auto;
+}
+.title-album-1 {
     width: calc(90% / 6);
-    height: 200px;
-    
-    flex-shrink: 0;
-
+    text-align: center;
+    float:left; 
 }
-#recently-played img {
-    width: 100%;
-    height: 100%;
+.title-album-1 h3,
+.title-album-2 h3 {
+    font-size: 15px;
+    font-weight: 800;
+    padding-top: 15px;
+}
+.title-album-1>div {
+    font-size: 12px;
+    padding-top: 10px;
+    color: #A3A3A3;
+}
+    /* created-for section e recently played*/
+
+.song-album-2,
+.description-album-2 {
+    justify-content: flex-start;
+}
+#recently-played .title-album-2,
+.song-album-2 img {
+    width: calc(90% / 6);
+    margin-left: 15px;
+    text-align:center;
 }
 
-#creater-for h2 {
+#created-for>h2,
+#popolar-artist>h2 {
     width: 100%;
+    font-size: 30px;
+    padding: 30px 0 15px 20px;
+}
+#created-for>p,
+#popolar-artist>p {
+    font-size: 20px;
+    margin-left: 20px;
+    margin-bottom: 50px;
+    color: #A3A3A3;
+}
+
+    /* popolar-artist section */
+#popolar-artist img {
+    border-radius: 50%;
 }
 /* footer */
 
@@ -346,6 +391,27 @@ main {
 }
 @media all and (max-width: 992px) {
 
+    #recently-played {
+        flex-wrap: wrap;
+    }
+
+    #song-album-1,
+    .description-album-1 {
+    justify-content: space-around;
+    }
+    .song-album-1 img {
+        width: calc(90% / 4);
+        margin: auto;
+    }
+    .description-album-1 {
+        width: 100%;
+        margin: auto;
+    }
+    .title-album-1 {
+        width: calc(90% / 4);
+        margin: auto;
+        text-align: center;
+    }
     .footer-center .center-top {
         width: 80%;
     }
