--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ main {
     max-width: 100%;
     height: 100%;
     overflow-y: auto;
-
 }
 
     /* eside-left section */
@@ -41,6 +40,11 @@ main {
     flex-direction: column;
     justify-content: space-between;
 }
+.eside-left i,
+.eside-left div,
+.eside-left span{
+    color: #A3A3A3;
+}
 .eside-left .logo {
     width: 100%; 
     height: 80px;
@@ -48,58 +52,61 @@ main {
 }
 #logo-1 {
     margin-left: 20px;
+    width: 60%;
 }
 #logo-2 {
     width: 30px; 
     margin: auto;
     display: none;
 }
-.eside-left img{
-    height: 36px;
-}
-
 .eside-left .main-menu {
     height: 110px; 
     padding-left: 20px;
     font-size: 16px;
     justify-content: space-around;
 }
-.main-menu i {
-    width: 32px;
-    font-size: 25px;
+.main-menu img {
+    width: 25px;
 }
-/* .main-playlist {
-    width: 100%;
-    align-items:stretch;
-} */
+.icon-menu {
+    align-items: center;
+}
+.icon-menu span{
+    padding-left: 10px;
+}
 .main-playlist span {
     display: inline-block;
     font-size: 15px;
     font-weight: 800;
     padding-left: 10px;
-    color: #A3A3A3;
 }
 .main-playlist i {
     font-size: 40px;
-    color: #D2D2D2;
 }
 .icon-playlist {
-    display:inline-block;
     padding-top: 5px;
+    align-items: center;
     align-items: center;
 }
 .icon-playlist i{
-    color: #A3A3A3;
     align-items: center;
 }
-/* .new-playlist {
+#conteiner-playlist {
     overflow: auto;
-} */
-.new-playlist div{
+}
+.main-playlist {
+    height: 100px;
+    color: white;
+    padding-left: 20px;
+    padding-top: 15px;
+    font-size: 14px;
+    align-items: stretch;
+    /* overflow: auto; */
+}
+.new-playlist li{
     width: 100%;
     font-size: 13px;
     padding-top: 10px;
-    color: #A3A3A3;
 }
 .eside-left .main-playlist {
     color: white;
@@ -118,8 +125,12 @@ main {
     padding-bottom: 15px;
     color: white;
 }
-#install i{
-    font-size: 15px;
+#install {
+    align-items: center;
+}
+#install img{
+    width: 25px;
+    margin-left: 20px;
     color: #A3A3A3;
 }
 #install span {
@@ -196,34 +207,34 @@ main {
 }
 
     /* song-content section */
-#song-content {
-    margin-bottom: 30px;
+#recently-played,
+#created-for,
+#popolar-artist {
+    width: 100%;
+    margin-bottom: 15px;
+    flex-direction: column;
 }
-
-/* #song-album-1,
-.description-album-1 {
-    justify-content: space-around;
-} */
-#song-content>h2 {
+#recently-played>h2{
     width: 100%;
     font-size: 30px;
     padding: 30px 0 50px 20px;
 }
-#recently-played .song-album {
-    padding: 0 15px 0 15px;
-}
-.song-album-1 img {
+.song-album-1 {
     width: 100%;
-    margin: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
-.description-album-1 {
+.song-album-1 img,
+.song-album-2 img {
     width: 100%;
     margin: auto;
 }
 .title-album-1 {
     width: calc(90% / 6);
+    margin: 0 auto 15px auto;
     text-align: center;
-    float:left; 
 }
 .title-album-1 h3,
 .title-album-2 h3 {
@@ -237,29 +248,29 @@ main {
     color: #A3A3A3;
 }
     /* created-for section e recently played*/
-
-.song-album-2,
-.description-album-2 {
-    justify-content: flex-start;
+.song-album-2 {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    justify-content: flex-star;
+    flex-wrap: wrap;
 }
-#recently-played .title-album-2,
-.song-album-2 img {
+.title-album-2 {
     width: calc(90% / 6);
-    margin-left: 15px;
-    text-align:center;
+    text-align: center;
+    margin: 0 0 15px 23px;
 }
-
 #created-for>h2,
 #popolar-artist>h2 {
     width: 100%;
     font-size: 30px;
-    padding: 30px 0 15px 20px;
+    padding: 30px 0 8px 20px;
 }
 #created-for>p,
 #popolar-artist>p {
-    font-size: 20px;
+    font-size: 13px;
     margin-left: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     color: #A3A3A3;
 }
 
@@ -286,6 +297,7 @@ main {
     height: 100%;
 }
 .left-container {
+    width: 100%;
     align-items: center;
     height: 100%;
 }
@@ -295,6 +307,7 @@ main {
     margin-left: 8px;
 }
 .footer-left .song-description {
+    width: 35%;
     margin-left: 6%;
 }
 .footer-left .song-description h3{
@@ -385,32 +398,62 @@ main {
 }
 @media all and (max-width: 1200px) {
 
+    .title-album-1,
+    .title-album-2 {
+        width: calc(90% / 4);
+        text-align: center;
+        margin: 0 10px 15px 10px;    
+    }
+    .song-album-2 {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        justify-content: flex-star;
+        flex-wrap: wrap;
+    }
     .footer-center .center-top {
         width: 60%;
     }
 }
-@media all and (max-width: 992px) {
+@media all and (max-width: 1060px) {
 
-    #recently-played {
+    .title-album-1 {
+        width: calc(90% / 3);
+        text-align: center;
+        margin: 0px 0 15px 0;
+    }
+    .song-album-1 {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        justify-content: space-around;
         flex-wrap: wrap;
     }
-
-    #song-album-1,
-    .description-album-1 {
-    justify-content: space-around;
-    }
-    .song-album-1 img {
-        width: calc(90% / 4);
-        margin: auto;
-    }
-    .description-album-1 {
-        width: 100%;
-        margin: auto;
-    }
-    .title-album-1 {
-        width: calc(90% / 4);
-        margin: auto;
+    .title-album-2 {
+        width: calc(90% / 3);
         text-align: center;
+        margin: 0 10px 15px 15px;
+    }
+}
+
+@media all and (max-width: 992px) {
+
+    .title-album-1,
+    .title-album-2 {
+        width: calc(90% / 2);
+        text-align: center;
+        margin: 0 0 30px 0;
+    }
+    .song-album-1,
+    .song-album-2 {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    #created-for>h2 {
+    padding: 0 0 15px 20px;
     }
     .footer-center .center-top {
         width: 80%;
@@ -445,8 +488,14 @@ main {
     #logo-2 {
         display: block;
     }
-
-
+    .eside-left .main-menu {
+        align-items: center;
+        padding-left: 0;
+        margin-top: 15px;
+    }
+    .icon-menu span {
+        display: none;
+    }
     #footer-section {
     justify-content: space-around;
     }
@@ -458,17 +507,20 @@ main {
         justify-content: space-between;
     }
     .footer-left .song-icons {
+        width: 27%;
+        justify-content: center;
         flex-direction: column;
-        margin-left: 0;
+        margin-left: 15%;
     }
-    .footer-left .song-description div {
-        width: 50px;
+    .footer-left .left-container i {
+        color: #C1C1C1;
+        padding-left: 0;
     }
     .left-container img {
         height: 30px;    
     }
     .footer-left .left-container i {
-        padding-left: 10px;
+        padding-left: 0px;
     }
     .footer-center .center-top {
         width: 95%;
