--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ main {
     width: 100%;
     max-width: 100%;
     height: 100%;
-    overflow-y: auto;
 }
 
     /* eside-left section */
@@ -92,21 +91,27 @@ main {
     align-items: center;
 }
 #conteiner-playlist {
-    overflow: auto;
+    overflow: visible;
 }
 .main-playlist {
-    height: 100px;
+    flex-direction: column;
+    height: 190px;
     color: white;
     padding-left: 20px;
     padding-top: 15px;
     font-size: 14px;
-    align-items: stretch;
-    /* overflow: auto; */
+    overflow: visible;
+}
+.new-playlist {
+    height: 100%;
+    margin-bottom: 20px;
+    overflow: auto;
 }
 .new-playlist li{
     width: 100%;
     font-size: 13px;
     padding-top: 10px;
+    list-style: none;
 }
 .eside-left .main-playlist {
     color: white;
@@ -117,6 +122,7 @@ main {
 .main-menu {
     flex-direction: column;
     color: #D2D2D2;
+    overflow: hidden;
 }
 .main-acount  {
     width: 100%;
@@ -124,6 +130,7 @@ main {
     font-size: 20px;
     padding-bottom: 15px;
     color: white;
+    background-color: black;
 }
 #install {
     align-items: center;
@@ -534,7 +541,13 @@ main {
     .footer-right .right-center hr{
         min-width: 10%;
     }
-
-
 }
 
+@media all and (max-height: 530px) {
+    .main-playlist {
+        overflow: auto;
+    }
+    .main-acount {
+        overflow: hidden;
+    }
+}
