--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@ body {
     display: table; 
     clear: both;
 }
+.relative {
+    position: relative;
+}
 
 /* main section*/
 main {
@@ -66,9 +69,23 @@ main {
 }
 .main-menu img {
     width: 25px;
+    filter:brightness(50%);
 }
 .icon-menu {
     align-items: center;
+    cursor: pointer;
+}
+.icon-menu:hover span,
+#install:hover span {
+    color: white;
+}
+.icon-menu:hover img,
+#install:hover img {
+    filter: brightness(200%);
+}
+.main-menu img.active,
+.main-menu span.active {
+    filter: brightness(200%);
 }
 .icon-menu span{
     padding-left: 10px;
@@ -90,17 +107,24 @@ main {
 .icon-playlist i{
     align-items: center;
 }
+.icon-playlist:hover i,
+.icon-playlist:hover span,
+.new-playlist li:hover{
+    color: white;
+    cursor: pointer;
+}
+
 #conteiner-playlist {
     overflow: visible;
 }
 .main-playlist {
     flex-direction: column;
-    height: 190px;
+    height: 40vh;
     color: white;
     padding-left: 20px;
     padding-top: 15px;
     font-size: 14px;
-    overflow: visible;
+    overflow: auto;
 }
 .new-playlist {
     height: 100%;
@@ -124,6 +148,7 @@ main {
     color: #D2D2D2;
     overflow: hidden;
 }
+
 .main-acount  {
     width: 100%;
     flex-direction: column;
@@ -136,14 +161,26 @@ main {
     align-items: center;
 }
 #install img{
-    width: 25px;
+    width: 20px;
     margin-left: 20px;
+    margin-right: 5px;
     color: #A3A3A3;
+    filter:brightness(50%);
 }
 #install span {
     font-size: 15px;
     padding-left: 5px;
     color: #A3A3A3;
+}
+#nome-utente img {
+    color: white;
+    width: 20px;
+    border: 1px solid #A3A3A3;
+    border-radius: 50%;
+}
+#nome-utente {
+    align-items: center;
+    margin-left: 20px;
 }
 #nome-utente span{
     font-size: 20px;
@@ -197,8 +234,18 @@ main {
     cursor: pointer;
     background-color: black;
 }
+.call-in-action a:hover {
+    transform: scale(1.1, 1.1);
+}
 .song-conteiner {
     justify-content: center;
+}
+.category div:hover a{
+    color: white;
+}
+.category div:active hr {
+    visibility: visible;
+    border: 1px solid greenyellow;
 }
 .category {
     width: 90%;
@@ -206,13 +253,22 @@ main {
     justify-content: center;
 }
 .category a{
-    font-size: 15px;
-    padding: 0 15px 20px 15px;
+    font-size: 13px;
+    margin: 0 15px 20px 15px;
     font-weight: 600;
     color: #A3A3A3;
     text-decoration: none;
 }
+.category hr {
+    width: 25px;
+    margin: auto;
+    visibility: hidden;
+}
+hr.active {
+    visibility: visible;
+    border: 1px solid greenyellow;
 
+}
     /* song-content section */
 #recently-played,
 #created-for,
@@ -224,7 +280,7 @@ main {
 #recently-played>h2{
     width: 100%;
     font-size: 30px;
-    padding: 30px 0 50px 20px;
+    padding: 30px 0 40px 20px;
 }
 .song-album-1 {
     width: 100%;
@@ -254,6 +310,26 @@ main {
     padding-top: 10px;
     color: #A3A3A3;
 }
+.icon-play {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+    visibility: hidden;
+    color: white;
+}
+.title-album-1:hover img,
+.title-album-2:hover img {
+    opacity: 0.4;
+    cursor: pointer;
+}
+.title-album-1:hover .icon-play,
+.title-album-2:hover .icon-play{
+    visibility: visible;
+    cursor: pointer;
+}
+
     /* created-for section e recently played*/
 .song-album-2 {
     width: 100%;
@@ -320,17 +396,28 @@ main {
 .footer-left .song-description h3{
     color: white;
     font-size: 15px;
+    
 }
 .footer-left .song-description div{
-    color: #C1C1C1;
+    color: #A3A3A3;
     font-size: 12px;
 }
+.footer-left .song-description div:hover{
+    color: white;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .footer-left .left-container i {
-    color: #C1C1C1;
+    color: #A3A3A3;
     padding-left: 15px;
 }
 .song-icons {
     margin-left: 10%;
+}
+.song-icons i:hover {
+    color: white;
+    cursor: pointer;
 }
     /* footer-center */
 .footer-center {
@@ -347,18 +434,21 @@ main {
     justify-content: space-between;
     align-items: center;
 }
-.footer-center .center-top i {
+.center-top i {
     padding: 3px;
     color: white;
-    font-size: 15px;
+    font-size: 20px;
 }
-.footer-center .center-top .fa-play-circle {
-    font-size: 25px;
+.center-top .fa-play-circle {
+    font-size: 30px;
     margin-left: 10px;
     margin-right: 10px;
 }
-.footer-center .center-top .fa-caret-left,
-.footer-center .center-top .fa-caret-right {
+.center-top .fa-play-circle:hover {
+    transform: scale(1.1, 1.1);
+}
+.center-top .fa-caret-left,
+.center-top .fa-caret-right {
     font-size: 20px;
 }
 .footer-center .center-bottom {
@@ -372,11 +462,40 @@ main {
     font-size: 11px;
     margin: 10px;
 }
-.center-bottom hr {
+.center-bottom div.background-line {
     display: inline-block;
     height: 1px;
     width: 75%;
-    border: 2px solid white;
+    border: 2px solid #5A5A5A;
+    background-color: #5A5A5A;
+    cursor: pointer;
+}
+.center-bottom div.over-line {
+    display: inline-block;
+    height: 2px;
+    width: 18%;
+    border: 2px solid #C1C1C1;
+    background-color: #C1C1C1;
+    position:absolute;
+    top:-2px;
+    left:-2px;
+}
+.center-bottom div.ball {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: white;
+    position: absolute; 
+    top: -7.5px;
+    left: calc(100% - 7.5px);
+    visibility: hidden;
+}
+.center-bottom div.background-line:hover div.over-line{
+    border: 2px solid greenyellow;
+    background-color: greenyellow;
+}
+.center-bottom div.background-line:hover div.ball{
+    visibility: visible;
 }
 
     /* footer-right */
@@ -398,10 +517,46 @@ main {
     width: 50%;
     border: 2px solid #5A5A5A;
 }
+
 #hr-footer-right {
     position: absolute;
     width: 25%;
     color: #C1C1C1;
+}
+.right-center div.background-line {
+    display: inline-block;
+    height: 1px;
+    width: 60%;
+    border: 2px solid #5A5A5A;
+    background-color: #5A5A5A;
+    cursor: pointer;
+}
+.right-center div.over-line {
+    display: inline-block;
+    height: 2px;
+    width: 20%;
+    border: 2px solid #C1C1C1;
+    background-color: #C1C1C1;
+    position:absolute;
+    top:-2px;
+    left:-2px;
+}
+.right-center div.ball {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: white;
+    position: absolute; 
+    top: -7.5px;
+    left: calc(100% - 7.5px);
+    visibility: hidden;
+}
+.right-center div.background-line:hover div.over-line{
+    border: 2px solid greenyellow;
+    background-color: greenyellow;
+}
+.right-center div.background-line:hover div.ball{
+    visibility: visible;
 }
 @media all and (max-width: 1200px) {
 
@@ -543,10 +698,8 @@ main {
     }
 }
 
-@media all and (max-height: 530px) {
-    .main-playlist {
-        overflow: auto;
-    }
+@media all and (max-height: 635px) {
+
     .main-acount {
         overflow: hidden;
     }
